--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ChatterBot==0.7.6
 chatterbot-corpus==1.0.1
+Django==1.11.5
 django-cors-headers==2.1.0
 django-mongodb-engine==0.6.0
 djangotoolbox==1.8.0
